# aoc2025

./: .gitignore  .pre-commit-config.yaml  new_day_files.sh  pyproject.toml  template.py
01/: day01.py  day1.py
02/: day2.py
03/: day03.py
04/: day04.py
05/: day05.py
07/: day07.py
08/: day08.py
