[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "cameronb123",email = "cameronbarkerqwerty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib (>=1.0.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
